# Atmosphere.BE/Atmosphere.Application/Devices/Queries/GetAllDevicesHandler.cs
@@ -1,4 +1,5 @@
 using Atmosphere.Application.DTO;
+using Atmosphere.Core.Enums;
 using Atmosphere.Core.Repositories;
 using AutoMapper;
 using MediatR;
@@ -18,7 +19,7 @@ public class GetAllDevicesHandler : IRequestHandler<GetAllDevices, List<DeviceDt
 
     public async Task<List<DeviceDto>> Handle(GetAllDevices request, CancellationToken cancellationToken)
     {
-        var devices = await _deviceRepository.GetAllAsync();
+        var devices = await _deviceRepository.GetAllAsync(x => x.Role == UserRole.Device);
 
         return _mapper.Map<List<DeviceDto>>(devices);
     }
